css fixed, for both the cards, no overlapping  class names

--- a/components/Familymemberlist.css
+++ b/components/Familymemberlist.css
@@ -120,14 +120,13 @@
     left: 60%; /* same as .myInput */
     transform: translate(-50%, -50%);
     background: #fff;
-    overflow: auto;
     border-radius: 8px;
     outline: none;
     padding: 20px;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
     transition: all 0.3s ease-in-out;
     width: 30%;
-    height: 35%; /* adjust as needed */
+    height: 38%; /* adjust as needed */
 }
 
 
